# amqpcli

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: main.rs
