[package]
name = "amqpcli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amq-protocol-types = "7.0.1"
futures-lite = "1.12.0"
lapin = "2.1.1"
mimalloc = "0.1.29"
structopt = "0.3.26"
tokio = { version = "1.18.2", features = ["full"] }

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.24.1"
